[tool.poetry]
name = "charm-refresh"
version = "0.1.0"
description = ""
authors = ["Carl Csaposs <carl.csaposs@canonical.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
packaging = ">=24.1"
charm-api = {git = "https://github.com/canonical/charm-api"}
ops = ">=2.9.0"
lightkube = ">=0.15.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
